# ttyrecall

./: .dir-locals.el  Cargo.toml  INSTALL.md  README.md  ttyrecall.code-workspace
.vim/: coc-settings.json
etc/: daemon.toml
ttyrecall/: Cargo.toml
ttyrecall-common/: Cargo.toml  LICENSE
ttyrecall-common/src/: lib.rs
ttyrecall-ebpf/: Cargo.toml
ttyrecall-ebpf/src/: generate.sh  generated_vmlinux.rs  main.rs
ttyrecall/src/: cli.rs  daemon.rs  main.rs  manager.rs  session.rs
ttyrecall/src/daemon/: config.rs
xtask/: Cargo.toml
xtask/src/: build.rs  build_ebpf.rs  run.rs
