[package]
name = "ttyrecall"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

[dependencies]
aya = { version = "0.12", features = ["async_tokio"] }
aya-log = "0.2"
ttyrecall-common = { path = "../ttyrecall-common", features = ["user"] }
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
bstr = { version = "1.10.0", features = ["serde"] }
nix = { version = "0.29.0", features = ["fs", "user"] }
chrono = "0.4.38"
color-eyre = "0.6.3"
either = "1.13.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
clap = { version = "4.5.18", features = ["derive"] }
toml = "0.8.19"
zstd = "0.13.2"
clap_complete = "4.5.32"

[[bin]]
name = "ttyrecall"
path = "src/main.rs"
